After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796219 - "Remember passwords" preferences setting ignored
"Remember passwords" preferences setting ignored
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Passwords, Cookies, & Certificates
3.28.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-17 20:22 UTC by Technical Support
Modified: 2018-06-19 23:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screencast (1.40 MB, video/ogg)
2018-05-24 04:48 UTC, Technical Support
  Details
Don't offer to remember passwords when setting is disabled (943 bytes, patch)
2018-05-25 14:25 UTC, Michael Catanzaro
committed Details | Review

Description Technical Support 2018-05-17 20:22:09 UTC
As of update to Epiphany 3.28.1, blue bar at top of window prompts to save password regardless of whether the "Remember passwords" preferences setting is checked or not. Expected behavior would be that if "Remember passwords" is unchecked, the blue bar would not appear.
Comment 1 Michael Catanzaro 2018-05-17 20:23:53 UTC
What version were you using previously (last known good)?
Comment 2 Technical Support 2018-05-17 20:57:05 UTC
3.26.1

Update went directly from 3.26.1 to 3.28.1
Comment 3 Michael Catanzaro 2018-05-23 01:38:46 UTC
OK yeah, I can reproduce this in 3.28. It's already fixed in master, but that code was largely rewritten, so that's not so surprising.
Comment 4 Michael Catanzaro 2018-05-23 01:47:57 UTC
(In reply to Michael Catanzaro from comment #3)
> It's already fixed in master

No, I can reproduce it in master now too. I swear I tested this just a couple minutes ago. Ah well.
Comment 5 Michael Catanzaro 2018-05-23 01:52:38 UTC
OK, problem was I got very confused by dconf-editor delaying my settings changes. I was using it instead of the preferences dialog to avoid https://bugs.webkit.org/show_bug.cgi?id=185818.

The setting works properly for me in all versions of Epiphany. Can't reproduce.

Is there any particular website you're seeing this on?
Comment 6 Technical Support 2018-05-23 20:37:58 UTC
No. It happens every time a password field is recognized, regardless of whether the "Remember passwords" preferences setting is checked or not.

If it doesn't happen with the preference enabled, it doesn't happen with the preference disabled either. So if a password has been saved, it won't happen with the preference disabled (or if "Never Saved" has been clicked for the site).

It is rock solid at my end. If it doesn't reproduce for you, what could be the difference? A missing dependency?
Comment 7 Michael Catanzaro 2018-05-24 03:16:58 UTC
> It is rock solid at my end. If it doesn't reproduce for you, what could be
> the difference? A missing dependency?

No, dependencies aren't going to affect this.

I'm testing on https://lwn.net/. You don't need an account, just enter any random nonsense using the login form at the top. Can you reproduce the problem on that website? For me, I get the prompt if and only if the setting is enabled.

How are you changing the setting? Preferences dialog?

Can you post a couple screencast (Ctrl+Alt+Shift+R) demonstrating exactly what you're doing? It might seem excessive, but this isn't the sort of thing that we should be getting different results with. Some step in your testing must be different from how I'm trying to reproduce.
Comment 8 Technical Support 2018-05-24 04:48:05 UTC
Created attachment 372374 [details]
Screencast

"Remember passwords" unchecked in "Stored Data" preferences. Same effect, checked or unchecked. Setting changed within Ephiphany "Preferences."
Comment 9 Michael Catanzaro 2018-05-25 12:27:54 UTC
OK, I can reproduce again today. I think I was right the first time:

(In reply to Michael Catanzaro from comment #3)
> OK yeah, I can reproduce this in 3.28. It's already fixed in master, but
> that code was largely rewritten, so that's not so surprising.

and just got really confused by dconf-editor.
Comment 10 Michael Catanzaro 2018-05-25 14:25:52 UTC
The following fix has been pushed:
52be3dd Don't offer to remember passwords when setting is disabled
Comment 11 Michael Catanzaro 2018-05-25 14:25:57 UTC
Created attachment 372399 [details] [review]
Don't offer to remember passwords when setting is disabled
Comment 12 Michael Catanzaro 2018-05-25 14:32:44 UTC
This was indeed already fixed on master, just pushed just to 3.28. Thanks again for reporting. Even if it took me a while to figure out what I was doing.
Comment 13 Technical Support 2018-06-19 23:20:01 UTC
Sounds good. Though problem persists. Latest version in repository, version 3.28.1, continues to ignore setting.
Comment 14 Michael Catanzaro 2018-06-19 23:25:25 UTC
This is fixed in 3.28.3.