Don't offer to remember passwords when setting is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=796219